--- a/install
+++ b/install
@@ -14,3 +14,5 @@ fi
 python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 echo "PATH=\"\$PATH:\$HOME/.platformio/penv/bin\"" >> $HOME/.bashrc
 
+echo "Installation complete! Run the following to update the changes made:"
+echo "source ~/.bashrc"
