--- a/install
+++ b/install
@@ -14,5 +14,7 @@ fi
 python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 echo "PATH=\"\$PATH:\$HOME/.platformio/penv/bin\"" >> $HOME/.bashrc
 
+sudo apt install -y python3-pyudev
+
 echo "Installation complete! Run the following to update the changes made:"
 echo "source ~/.bashrc"
