--- a/install
+++ b/install
@@ -14,7 +14,7 @@ fi
 python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 echo "PATH=\"\$PATH:\$HOME/.platformio/penv/bin\"" >> $HOME/.bashrc
 
-sudo apt install -y python3-pyudev
+sudo apt install -y python3-pyudev libusb-dev
 
 wget https://www.pjrc.com/teensy/00-teensy.rules
 sudo cp 00-teensy.rules /etc/udev/rules.d/
